fix scss var collapse

--- a/packages/ds/src/components/collapse/Collapse.scss
+++ b/packages/ds/src/components/collapse/Collapse.scss
@@ -3,7 +3,7 @@
 .collapse {
   &__content {
     @include line-overflow(3);
-    margin: 8px;
+    margin: var(--dimensions-tiny);
     .collapse__expanded & {
       -webkit-line-clamp: initial;
       max-height: none;
